Project ecommerce_product_analytics {
  database_type: 'PostgreSQL'
  Note: 'analytics for e commerce product'
}

Table users {
  user_id int [pk]
  signup_date date [not null]
  country varchar(50) [not null]
  acquisition_channel varchar(50) [not null]
}

Table products {
  product_id int [pk]
  product_name varchar(100) [not null]
  category varchar(50) [not null]
  price numeric(10,2) [not null, check: `price >= 0`]
}

Table orders {
  order_id int [pk]
  user_id int [not null]
  order_date date [not null]
  status varchar(20) [not null]
}

Table order_items {
  order_item_id int [pk]
  order_id int [not null]
  product_id int [not null]
  quantity int [not null, check: `quantity > 0`]
  price numeric(10,2) [not null, check: `price >= 0`]
}

Ref: orders.user_id > users.user_id
Ref: order_items.order_id > orders.order_id
Ref: order_items.product_id > products.product_id